# blaswrap

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  blaswrap.pc  blaswrap.pc.in  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool  scratch.txt
autom4te.cache/: output.0  output.10  output.2  output.4  output.5  output.7  requests  traces.0  traces.1  traces.10  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
src/: Makefile  Makefile.am  Makefile.in  blaswrap-config  blaswrap-config.in  blaswrap.h
tests/: Makefile  Makefile.am  Makefile.in  blaswrap-tests  blaswrap-tests.c  mkmatrices.m  operations.c
tests/.deps/: blaswrap-tests.Po  operations.Po
